🐛 gnb,lnb z-index fixed

--- a/styles.css
+++ b/styles.css
@@ -1174,7 +1174,7 @@ i {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 20;
+  z-index: 200;
   width: 240px;
   height: 100vh;
   overflow-y: auto;
@@ -1253,7 +1253,7 @@ i {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 100;
   width: 100%;
   height: 100vh;
   background-color: rgba(63, 65, 80, 0.5);
@@ -1267,7 +1267,7 @@ i {
 .search-modal {
   position: fixed;
   top: 0;
-  z-index: 30;
+  z-index: 300;
   width: 100%;
   height: 100vh;
   padding: 12px 0;
@@ -1399,9 +1399,11 @@ i {
     left: 0;
     width: 100%; }
   .global-header .gnb {
-    top: 0; }
+    top: 0;
+    z-index: 50; }
   .global-header .lnb {
-    top: 50px; }
+    top: 50px;
+    z-index: 40; }
   @media screen and (min-width: 768px) {
     .global-header {
       height: 130px; }
